[gd_scene load_steps=49 format=3 uid="uid://cw5v4ivweo6bl"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_kiu2d"]
[ext_resource type="SpriteFrames" uid="uid://6xhup71bfrop" path="res://player/player_spriteframes.tres" id="2_gp143"]
[ext_resource type="PackedScene" uid="uid://c10mfic5lq45q" path="res://player/HUD/oxygen_level.tscn" id="3_06578"]
[ext_resource type="AudioStream" uid="uid://cyfg7al7hkk4h" path="res://resources/audio/pickup.mp3" id="3_sf7hi"]
[ext_resource type="Script" path="res://player/PlayerStatemachine.gd" id="4_jvups"]
[ext_resource type="Texture2D" uid="uid://bteqkxejmlhbm" path="res://resources/sprites/light_circle.png" id="5_7idbf"]
[ext_resource type="Script" path="res://player/states/land_idle.gd" id="5_pbnr6"]
[ext_resource type="Texture2D" uid="uid://booso8hr2mkaa" path="res://player/assets/wet.png" id="5_x37sp"]
[ext_resource type="Script" path="res://player/states/land_move.gd" id="6_2ydie"]
[ext_resource type="Script" path="res://player/states/land_jump.gd" id="6_ih6bu"]
[ext_resource type="Script" path="res://player/states/land_fall.gd" id="8_mtsqc"]
[ext_resource type="AudioStream" uid="uid://ceahvicu8sdhc" path="res://resources/audio/player_walk.mp3" id="8_rtfya"]
[ext_resource type="Script" path="res://player/states/water_idle.gd" id="9_fkvoy"]
[ext_resource type="Script" path="res://player/states/water_move.gd" id="10_xyd02"]
[ext_resource type="Script" path="res://player/states/water_float.gd" id="11_mb7uq"]
[ext_resource type="Script" path="res://player/states/water_sink.gd" id="12_5gqv5"]
[ext_resource type="AudioStream" uid="uid://bd4rtxrpoopth" path="res://resources/audio/water_woosh.mp3" id="13_fqt3o"]
[ext_resource type="PackedScene" uid="uid://bpp4cb8b201on" path="res://player/HUD/ammo_pouch.tscn" id="13_u68c8"]
[ext_resource type="Script" path="res://player/states/death.gd" id="14_2opko"]
[ext_resource type="Script" path="res://player/AimIndicator.gd" id="15_ape5n"]
[ext_resource type="Texture2D" uid="uid://do8voppctjmh1" path="res://player/assets/arrow.png" id="15_gffn3"]
[ext_resource type="AudioStream" uid="uid://dlopy5shes3tv" path="res://resources/audio/water_splash.mp3" id="17_1iku6"]
[ext_resource type="AudioStream" uid="uid://dhwwrqdbi7uui" path="res://resources/audio/player_death.mp3" id="17_5rd4q"]
[ext_resource type="Script" path="res://player/RetrieveFish.gd" id="18_k0akq"]
[ext_resource type="Texture2D" uid="uid://ceq5fqnmi4av7" path="res://resources/sprites/cone.png" id="18_ph5f0"]
[ext_resource type="FontFile" uid="uid://dekp0len3c0jk" path="res://resources/fonts/Minecraft.ttf" id="20_5uo56"]
[ext_resource type="Texture2D" uid="uid://beadwq5fnn8d6" path="res://player/assets/hotbar.png" id="22_l5v2b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f5jfp"]
radius = 5.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4ksd0"]
radius = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fsp7w"]
atlas = ExtResource("5_x37sp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp7ng"]
atlas = ExtResource("5_x37sp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4scw"]
atlas = ExtResource("5_x37sp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_epd12"]
atlas = ExtResource("5_x37sp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qko3k"]
atlas = ExtResource("5_x37sp")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnm18"]
atlas = ExtResource("5_x37sp")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0glt"]
atlas = ExtResource("5_x37sp")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mknma"]
atlas = ExtResource("5_x37sp")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrmkt"]
atlas = ExtResource("5_x37sp")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw3e7"]
atlas = ExtResource("5_x37sp")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn5j2"]
atlas = ExtResource("5_x37sp")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8lct"]
atlas = ExtResource("5_x37sp")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2wt2"]
atlas = ExtResource("5_x37sp")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy88l"]
atlas = ExtResource("5_x37sp")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar62m"]
atlas = ExtResource("5_x37sp")
region = Rect2(224, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j3c3"]
atlas = ExtResource("5_x37sp")
region = Rect2(240, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0sfk"]
atlas = ExtResource("5_x37sp")
region = Rect2(256, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1u6r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsp7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp7ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4scw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epd12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qko3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnm18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0glt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mknma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrmkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw3e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn5j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8lct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2wt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy88l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar62m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j3c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0sfk")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m66hs"]
radius = 2.0
height = 10.0

[node name="Player" type="CharacterBody2D"]
z_index = 100
z_as_relative = false
collision_layer = 2
script = ExtResource("1_kiu2d")

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_f5jfp")
debug_color = Color(0.992157, 0, 0, 0.419608)

[node name="RetrieveFishArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("18_k0akq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RetrieveFishArea"]
shape = SubResource("CircleShape2D_4ksd0")
debug_color = Color(0, 0.419608, 0, 0.419608)

[node name="pickup" type="AudioStreamPlayer2D" parent="RetrieveFishArea"]
stream = ExtResource("3_sf7hi")

[node name="Renderer" type="Node2D" parent="."]

[node name="MainAnimator" type="AnimatedSprite2D" parent="Renderer"]
sprite_frames = ExtResource("2_gp143")
animation = &"land_idle"
autoplay = "land_idle"
frame_progress = 0.282984

[node name="PointLight2D" type="PointLight2D" parent="Renderer"]
energy = 0.3
range_layer_min = -2
texture = ExtResource("5_7idbf")

[node name="DripWater" type="AnimatedSprite2D" parent="Renderer"]
visible = false
sprite_frames = SubResource("SpriteFrames_f1u6r")
frame = 16

[node name="Face" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_m66hs")

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("4_jvups")
starting_state = NodePath("land_idle")

[node name="land_idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_fall_state", "land_jump_state", "land_move_state", "water_idle_state")]
script = ExtResource("5_pbnr6")
land_fall_state = NodePath("../land_fall")
land_jump_state = NodePath("../land_jump")
land_move_state = NodePath("../land_move")
water_idle_state = NodePath(".")

[node name="land_move" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_fall_state", "land_jump_state", "land_idle_state", "water_idle_state")]
script = ExtResource("6_2ydie")
land_fall_state = NodePath("../land_fall")
land_jump_state = NodePath("../land_jump")
land_idle_state = NodePath("../land_idle")
water_idle_state = NodePath("../water_idle")

[node name="footstep" type="AudioStreamPlayer2D" parent="StateMachine/land_move"]
stream = ExtResource("8_rtfya")
volume_db = 20.0

[node name="land_jump" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_fall_state", "land_idle_state", "land_move_state", "water_idle_state")]
script = ExtResource("6_ih6bu")
land_fall_state = NodePath("../land_fall")
land_idle_state = NodePath("../land_idle")
land_move_state = NodePath("../land_move")
water_idle_state = NodePath("../water_idle")

[node name="land_fall" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_idle_state", "land_move_state", "water_idle_state")]
script = ExtResource("8_mtsqc")
land_idle_state = NodePath("../land_idle")
land_move_state = NodePath("../land_move")
water_idle_state = NodePath("../water_idle")

[node name="water_idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("water_sink_state", "water_float_state", "water_move_state")]
script = ExtResource("9_fkvoy")
water_sink_state = NodePath("../water_sink")
water_float_state = NodePath("../water_float")
water_move_state = NodePath("../water_move")

[node name="water_move" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_jump_state", "water_idle_state", "water_float_state", "water_sink_state")]
script = ExtResource("10_xyd02")
land_jump_state = NodePath("../land_jump")
water_idle_state = NodePath("../water_idle")
water_float_state = NodePath("../water_float")
water_sink_state = NodePath("../water_sink")

[node name="water_float" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_jump_state", "water_idle_state", "water_move_state", "water_sink_state")]
script = ExtResource("11_mb7uq")
land_jump_state = NodePath("../land_jump")
water_idle_state = NodePath("../water_idle")
water_move_state = NodePath("../water_move")
water_sink_state = NodePath("../water_sink")

[node name="water_sink" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("water_idle_state", "water_move_state", "water_float_state")]
script = ExtResource("12_5gqv5")
water_idle_state = NodePath("../water_idle")
water_move_state = NodePath("../water_move")
water_float_state = NodePath("../water_float")

[node name="death" type="Node2D" parent="StateMachine"]
script = ExtResource("14_2opko")

[node name="death" type="AudioStreamPlayer2D" parent="StateMachine/death"]
stream = ExtResource("17_5rd4q")

[node name="splash" type="AudioStreamPlayer2D" parent="StateMachine"]
stream = ExtResource("17_1iku6")
volume_db = 3.0

[node name="woosh" type="AudioStreamPlayer2D" parent="StateMachine"]
stream = ExtResource("13_fqt3o")
volume_db = -30.0

[node name="StateLabel" type="Label" parent="."]
visible = false
offset_left = -19.5
offset_top = -32.5
offset_right = 20.5
offset_bottom = -9.5
theme_override_fonts/font = ExtResource("20_5uo56")
theme_override_font_sizes/font_size = 12
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AimIndicator" type="Node2D" parent="."]
script = ExtResource("15_ape5n")

[node name="Arrow" type="Sprite2D" parent="AimIndicator"]
position = Vector2(30, 0)
rotation = 0.785397
texture = ExtResource("15_gffn3")

[node name="ConeLight" type="PointLight2D" parent="AimIndicator"]
position = Vector2(-15, 5.34058e-05)
scale = Vector2(2, 2)
range_layer_min = -2
texture = ExtResource("18_ph5f0")
offset = Vector2(25, 0)
texture_scale = 0.8

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hotbar" type="TextureRect" parent="CanvasLayer"]
z_as_relative = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -211.5
offset_top = -258.0
offset_right = 211.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("22_l5v2b")

[node name="AmmoPouch" parent="CanvasLayer" instance=ExtResource("13_u68c8")]
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="OxygenLevel" parent="CanvasLayer" instance=ExtResource("3_06578")]
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
tank_capacity = 30

[connection signal="body_entered" from="RetrieveFishArea" to="RetrieveFishArea" method="_on_body_entered"]
[connection signal="body_exited" from="RetrieveFishArea" to="RetrieveFishArea" method="_on_body_exited"]
